[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tuf-python"
version = "0.1.0"
description = "Trajectory Uncertainty Framework — TES & TDS scores for single-cell trajectory analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Your Name", email = "masoud.m5121@gmail.com"}]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "anndata>=0.8",
    "scanpy>=1.9",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "black", "flake8"]

[tool.setuptools.packages.find]
include = ["tuf*"]